// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notepad constructor should construct with assets 1`] = `
Array [
  Asset {},
]
`;

exports[`Notepad constructor should construct with lastModified 1`] = `"1970-01-01T12:00:00.001+12:00"`;

exports[`Notepad constructor should construct with notepadAssets 1`] = `
Array [
  "test",
]
`;

exports[`Notepad constructor should construct with sections 1`] = `
Array [
  Section {
    "title": "test",
  },
]
`;

exports[`Notepad toJson should generate a JSON object of the notepad 1`] = `"{\\"title\\":\\"test\\",\\"lastModified\\":\\"1970-01-01T12:00:00.001+12:00\\",\\"sections\\":[{\\"title\\":\\"test\\"}],\\"notepadAssets\\":[\\"test\\"]}"`;
